--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -78,75 +78,6 @@ shell:
 
 live_config_reload: true
 
-# -- For Tmux
-# Key bindings
-# A list with all available `key` names can be found here
-# https://docs.rs/glutin/*/glutin/enum.VirtualKeyCode.html#variants
-#
-# Run "xxd -psd" to find hex codes of keys.
-#
-# Alacritty + Tmux key integratio
-#   `\x02` is `C-b` as tmux prefix
-#   `\x1b` is `Esc`
-#key_bindings:
-#  - { key: H,        mods: Command,       action: None }
-#  - { key: Q,        mods: Command,       action: None }
-#
-#  # ----- change font size ----
-#  - { key: Key0,     mods: Command,       action: ResetFontSize    }
-#  - { key: Equals,   mods: Command,       action: IncreaseFontSize }
-#  - { key: Minus,    mods: Command,       action: DecreaseFontSize }
-#
-#  # ----- new pane/tab/window -----
-#  - { key: D,        mods: Command,       chars: "\x02="    } # new vertical pane with default shell
-#  - { key: D,        mods: Command|Shift, chars: "\x02-"    } # new vertical pane with commands menu
-#  - { key: N,        mods: Command,       chars: "\x02n"    } # new tab with default shell
-#
-#  # ----- close pane/tab/window -----
-#  - { key: W,        mods: Command,       chars: "\x02X"    } # close the pane
-#  - { key: Q,        mods: Command,       chars: "\x02d"    } # close the window
-#
-#  # ----- copy mode -----
-#  - { key: Y,        mods: Command       , chars: "\x02c"   } # enter vi copy mode, and search from up to down
-#
-#  # ----- navigate panes -----
-#  - { key: H,        mods: Command,       chars: "\x02h"    } # go to the pane left
-#  - { key: J,        mods: Command,       chars: "\x02j"    } # go to the pane above
-#  - { key: K,        mods: Command,       chars: "\x02k"    } # go to the pane below
-#  - { key: L,        mods: Command,       chars: "\x02l"    } # go to the pane right
-#
-#  # ----- resize panes -----
-#  - { key: H,        mods: Command|Shift, chars: "\x02H"         } # resize the current pane left
-#  - { key: J,        mods: Command|Shift, chars: "\x02J"         } # resize the current pane above
-#  - { key: K,        mods: Command|Shift, chars: "\x02K"         } # resize the current pane below
-#  - { key: L,        mods: Command|Shift, chars: "\x02L"         } # resize the current pane right
-#  - { key: Left,     mods: Command|Shift, chars: "\x02\x1b[D"    }
-#  - { key: Down,     mods: Command|Shift, chars: "\x02\x1b[B"    }
-#  - { key: Up,       mods: Command|Shift, chars: "\x02\x1b[A"    }
-#  - { key: Right,    mods: Command|Shift, chars: "\x02\x1b[C"    }
-#
-#  # ----- navigate tabs -----
-#  - { key: i,        mods: Command,       chars: "\x02i"    } # go to previous tab
-#  - { key: o,        mods: Command,       chars: "\x02o"    } # go to next tab
-#  - { key: Key1,     mods: Command,       chars: "\x021"    } # go to tab 1..9
-#  - { key: Key2,     mods: Command,       chars: "\x022"    }
-#  - { key: Key3,     mods: Command,       chars: "\x023"    }
-#  - { key: Key4,     mods: Command,       chars: "\x024"    }
-#  - { key: Key5,     mods: Command,       chars: "\x025"    }
-#  - { key: Key6,     mods: Command,       chars: "\x026"    }
-#  - { key: Key7,     mods: Command,       chars: "\x027"    }
-#  - { key: Key8,     mods: Command,       chars: "\x028"    }
-#  - { key: Key9,     mods: Command,       chars: "\x029"    }
-#
-#  # ----- rotate panes -----
-#  - { key: r,       mods: Command,        chars: "\x02r"    }
-#
-#  # ----- max pane -----
-#  - { key: m,       mods: Command,        chars: "\x02m"    }
-#
-#  # - { key: t,  mods: Command, action: CreateNewWindow }
-
-
 # Key bindings
 # A list with all available `key` names can be found here
 # https://docs.rs/glutin/*/glutin/enum.VirtualKeyCode.html#variants
@@ -211,4 +142,4 @@ key_bindings:
   - { key: U,       mods: Command,        chars: "\x19ye"    }
 
   # ------ bind esc ------
-  - { key: Semicolon, mods: Command, chars: "\x1b" }
+  - { key: Semicolon, mods: Command, chars: "\x1b" } # esc
