--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -36,7 +36,7 @@ background = "#ffffff"
 foreground = "#000000"
 
 [font]
-size = 14.5
+size = 16
 
 [font.bold]
 family = "JetBrainsMono Nerd Font"
@@ -63,7 +63,7 @@ x = 0
 y = 6
 
 [scrolling]
-history = 100000
+history = 0
 multiplier = 4
 
 [selection]
@@ -76,7 +76,7 @@ program = "/bin/bash"
 
 [window]
 decorations = "buttonless"
-# startup_mode = "SimpleFullscreen"
+startup_mode = "SimpleFullscreen"
 
 [mouse]
 hide_when_typing = true
