nvim: replace outline with aerial

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,38 +1,44 @@
+shell /opt/homebrew/bin/bash --login -i
+
 # font
 font_family JetBrainsMono Nerd Font Medium
-bold_font auto
-italic_font auto
-bold_italic_font auto
+bold_font JetBrainsMono Nerd Font Bold
+italic_font JetBrainsMono Nerd Font MediumItalic
+bold_italic_font JetBrainsMono Nerd Font BoldItalic
 font_size 16
-modify_font cell_height +6px
-modify_font cell_width -1px
+adjust_line_height 8
 include ./theme.conf
 
 
 # mouse
 copy_on_select true
+mouse_hide_wait 0
+
+
+# performance tuning
+input_delay 4
+repaint_delay 2
 
 
 # window layout
 hide_window_decorations titlebar-and-corners
 confirm_os_window_close 0
-enabled_layouts grid
+enabled_layouts splits,stack
 
 
 # tab bar
 tab_bar_edge top
 tab_bar_style separator
 tab_separator ""
-tab_title_template "{fmt.bg.white}  {index}"
+tab_title_template "{fmt.fg.grey}{fmt.bg.white}  {index}"
 active_tab_title_template "{fmt.fg.orange}{fmt.bg.white}  {index}"
 active_tab_font_style bold
+inactive_tab_font_style bold
 tab_bar_min_tabs 1
 
 
-# performance tuning
-input_delay 0
-repaint_delay 2
-sync_to_monitor no
+# advanced
+shell_integration no-cursor
 
 
 # keybinding
@@ -58,7 +64,7 @@ map cmd+equal change_font_size all +0.5
 map cmd+minus change_font_size all -0.5
 map cmd+0 change_font_size all 0
 # window
-map cmd+s launch --location=hsplit
+map cmd+s launch --location=split
 map cmd+h neighboring_window left
 map cmd+l neighboring_window right
 map cmd+k neighboring_window up
@@ -68,6 +74,9 @@ map cmd+shift+h resize_window narrower 0.5
 map cmd+shift+l resize_window wider 0.5
 map cmd+shift+j resize_window taller 0.5
 map cmd+shift+k resize_window shorter 0.5
+map cmd+m toggle_layout stack
 # scrolling
 map cmd+u scroll_page_up
 map cmd+d scroll_page_down
+# search
+map cmd+f launch --type=overlay --stdin-source=@screen_scrollback /opt/homebrew/bin/fzf --no-sort --no-mouse --exact -i
