nvim: toggleterm float

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,7 +6,8 @@ bold_font JetBrainsMono Nerd Font Bold
 italic_font JetBrainsMono Nerd Font MediumItalic
 bold_italic_font JetBrainsMono Nerd Font BoldItalic
 font_size 16
-adjust_line_height 8
+adjust_line_height 6
+adjust_column_width -1
 include ./theme.conf
 
 
@@ -16,18 +17,21 @@ mouse_hide_wait 0
 
 
 # performance tuning
-input_delay 4
+input_delay 5
 repaint_delay 2
 
 
 # window layout
 hide_window_decorations titlebar-and-corners
 confirm_os_window_close 0
-enabled_layouts splits,stack
+enabled_layouts fat,stack
+window_border_width 0.5pt
+active_border_color #ff4c00
+inactive_border_color #000000
 
 
 # tab bar
-tab_bar_edge top
+# tab_bar_edge top
 tab_bar_style separator
 tab_separator ""
 tab_title_template "{fmt.fg.grey}{fmt.bg.white}  {index}"
@@ -46,6 +50,8 @@ shell_integration no-cursor
 map ctrl+shift+equal no_op
 map ctrl+shift+minus no_op
 map cmd+q no_op
+# remap
+map ctrl+; send_key ctrl+[
 # tab management
 map cmd+n new_tab
 map cmd+i previous_tab
