--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -24,9 +24,9 @@ repaint_delay 2
 # window layout
 hide_window_decorations titlebar-and-corners
 confirm_os_window_close 0
-enabled_layouts fat,stack
+enabled_layouts splits,stack
 window_border_width 0.5pt
-active_border_color #ff4c00
+active_border_color #000000
 inactive_border_color #000000
 
 
@@ -50,8 +50,8 @@ shell_integration no-cursor
 map ctrl+shift+equal no_op
 map ctrl+shift+minus no_op
 map cmd+q no_op
-# remap
-map ctrl+; send_key ctrl+[
+map cmd+w no_op
+map ctrl+tab no_op
 # tab management
 map cmd+n new_tab
 map cmd+i previous_tab
@@ -71,15 +71,14 @@ map cmd+minus change_font_size all -0.5
 map cmd+0 change_font_size all 0
 # window
 map cmd+s launch --location=split
+map cmd+shift+s launch --location=hsplit
 map cmd+h neighboring_window left
 map cmd+l neighboring_window right
 map cmd+k neighboring_window up
 map cmd+j neighboring_window down
 map cmd+r layout_action rotate
-map cmd+shift+h resize_window narrower 0.5
-map cmd+shift+l resize_window wider 0.5
-map cmd+shift+j resize_window taller 0.5
-map cmd+shift+k resize_window shorter 0.5
+map cmd+shift+= resize_window wider 0.5
+map cmd+shift+- resize_window taller 0.5
 map cmd+m toggle_layout stack
 # scrolling
 map cmd+u scroll_page_up
