--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,28 +1,56 @@
 shell /opt/homebrew/bin/bash --login -i
 
 # font
-font_family JetBrainsMono Nerd Font Medium
+font_family JetBrainsMono Nerd Font
 bold_font JetBrainsMono Nerd Font Bold
-italic_font JetBrainsMono Nerd Font MediumItalic
+italic_font JetBrainsMono Nerd Font Italic
 bold_italic_font JetBrainsMono Nerd Font BoldItalic
-font_size 16
+font_size 17
 adjust_line_height 5
 adjust_column_width -1
-include ./theme.conf
+
+
+# theme
+background #ffffff
+foreground #000000
+cursor #666666
+cursor_shape block
+cursor_blink_interval 0
+cursor_text_color #ffffff
+selection_background #8d9091
+color0 #000000
+color8 #545753
+color1 #cc0000
+color9 #ef2828
+color2 #227a00
+color10 #3dcc06
+color3 #e89f00
+color11 #d6d600
+color4 #043ABD
+color12 #157ae6
+color5 #8f008c
+color13 #5a32a3
+color6 #05989a
+color14 #34e2e2
+color7 #d3d7cf
+color15 #ededec
+selection_foreground #ffffff
 
 
 # mouse
 copy_on_select true
 mouse_hide_wait 0
+paste_actions quote-urls-at-prompt
 
 
 # performance tuning
-input_delay 5
-repaint_delay 2
+repaint_delay 8
+input_delay 0
 
 
 # window layout
-hide_window_decorations titlebar-and-corners
+hide_window_decorations titlebar-only
+window_padding_width 0
 confirm_os_window_close 0
 enabled_layouts splits,stack
 window_border_width 0.5pt
@@ -81,7 +109,11 @@ map cmd+shift+= resize_window wider 0.5
 map cmd+shift+- resize_window taller 0.5
 map cmd+m toggle_layout stack
 # scrolling
-map cmd+u scroll_page_up
-map cmd+d scroll_page_down
+map cmd+d remote_control scroll-window 0.5p
+map cmd+u remote_control scroll-window 0.5p-
+map cmd+shift+k scroll_line_up
+map cmd+shift+j scroll_line_down
 # search
-map cmd+f launch --type=overlay --stdin-source=@screen_scrollback /opt/homebrew/bin/fzf --no-sort --no-mouse --exact -i
+ map cmd+shift+f launch --type=overlay --stdin-source=@screen_scrollback /opt/homebrew/bin/fzf --no-sort --no-mouse --exact -i
+map cmd+f show_scrollback
+
