nvim: block color

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,13 +1,14 @@
 shell /opt/homebrew/bin/bash --login -i
 
 # font
-font_family JetBrainsMono Nerd Font
+font_family JetBrainsMono Nerd Font Medium
 bold_font JetBrainsMono Nerd Font Bold
 italic_font JetBrainsMono Nerd Font Italic
-bold_italic_font JetBrainsMono Nerd Font BoldItalic
-font_size 17
-adjust_line_height 5
+bold_italic_font JetBrainsMono Nerd Font Bold Italic
+font_size 18
+adjust_line_height 6
 adjust_column_width -1
+symbol_map U+00B7 JetBrainsMono Nerd Font Thin
 
 
 # theme
@@ -44,8 +45,9 @@ paste_actions quote-urls-at-prompt
 
 
 # performance tuning
-repaint_delay 8
-input_delay 0
+repaint_delay 2
+input_delay 1
+sync_to_monitor no
 
 
 # window layout
@@ -66,7 +68,7 @@ tab_title_template "{fmt.fg.grey}{fmt.bg.white}  {index}"
 active_tab_title_template "{fmt.fg.orange}{fmt.bg.white}  {index}"
 active_tab_font_style bold
 inactive_tab_font_style bold
-tab_bar_min_tabs 1
+tab_bar_min_tabs 100
 
 
 # advanced
@@ -93,6 +95,7 @@ map cmd+6 goto_tab 6
 map cmd+7 goto_tab 7
 map cmd+8 goto_tab 8
 map cmd+9 goto_tab 9
+map cmd+; select_tab
 # font size
 map cmd+equal change_font_size all +0.5
 map cmd+minus change_font_size all -0.5
