--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -5,8 +5,8 @@ font_family JetBrainsMono Nerd Font Medium
 bold_font JetBrainsMono Nerd Font Bold
 italic_font JetBrainsMono Nerd Font Italic
 bold_italic_font JetBrainsMono Nerd Font Bold Italic
-font_size 18
-adjust_line_height 6
+font_size 17
+adjust_line_height 10
 adjust_column_width -1
 symbol_map U+00B7 JetBrainsMono Nerd Font Thin
 
@@ -117,6 +117,6 @@ map cmd+u remote_control scroll-window 0.5p-
 map cmd+shift+k scroll_line_up
 map cmd+shift+j scroll_line_down
 # search
- map cmd+shift+f launch --type=overlay --stdin-source=@screen_scrollback /opt/homebrew/bin/fzf --no-sort --no-mouse --exact -i
-map cmd+f show_scrollback
+map cmd+shift+y launch --type=overlay --stdin-source=@screen_scrollback /opt/homebrew/bin/fzf --no-sort --no-mouse --exact -i
+map cmd+y show_scrollback
 
