--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -3,12 +3,11 @@ shell /opt/homebrew/bin/bash --login -i
 # font
 font_family JetBrainsMono Nerd Font Medium
 bold_font JetBrainsMono Nerd Font Bold
-italic_font JetBrainsMono Nerd Font Italic
-bold_italic_font JetBrainsMono Nerd Font Bold Italic
+italic_font JetBrainsMono Nerd Font SemiLight Italic
+bold_italic_font CaskaydiaCove Nerd Font Bold Italic
 font_size 17
-adjust_line_height 10
+adjust_line_height 8
 adjust_column_width -1
-symbol_map U+00B7 JetBrainsMono Nerd Font Thin
 
 
 # theme
@@ -19,23 +18,31 @@ cursor_shape block
 cursor_blink_interval 0
 cursor_text_color #ffffff
 selection_background #8d9091
+selection_foreground #ffffff
+#black
 color0 #000000
 color8 #545753
+# red
 color1 #cc0000
 color9 #ef2828
+# green
 color2 #227a00
 color10 #3dcc06
+# yellow
 color3 #e89f00
 color11 #d6d600
+# blue
 color4 #043ABD
 color12 #157ae6
+# magenta
 color5 #8f008c
 color13 #5a32a3
+# cyan
 color6 #05989a
 color14 #34e2e2
+# white
 color7 #d3d7cf
 color15 #ededec
-selection_foreground #ffffff
 
 
 # mouse
@@ -61,14 +68,14 @@ inactive_border_color #000000
 
 
 # tab bar
-# tab_bar_edge top
+tab_bar_edge top
 tab_bar_style separator
 tab_separator ""
 tab_title_template "{fmt.fg.grey}{fmt.bg.white}  {index}"
 active_tab_title_template "{fmt.fg.orange}{fmt.bg.white}  {index}"
 active_tab_font_style bold
 inactive_tab_font_style bold
-tab_bar_min_tabs 100
+tab_bar_min_tabs 1
 
 
 # advanced
@@ -112,11 +119,11 @@ map cmd+shift+= resize_window wider 0.5
 map cmd+shift+- resize_window taller 0.5
 map cmd+m toggle_layout stack
 # scrolling
+map cmd+y show_scrollback
 map cmd+d remote_control scroll-window 0.5p
 map cmd+u remote_control scroll-window 0.5p-
 map cmd+shift+k scroll_line_up
 map cmd+shift+j scroll_line_down
 # search
-map cmd+shift+y launch --type=overlay --stdin-source=@screen_scrollback /opt/homebrew/bin/fzf --no-sort --no-mouse --exact -i
-map cmd+y show_scrollback
-
+map cmd+shift+f launch --type=overlay --stdin-source=@screen_scrollback /opt/homebrew/bin/fzf --no-sort --no-mouse --exact -i
+map cmd+f combine : show_scrollback : send_key ?
