nvim: add blame

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -3,11 +3,12 @@ shell /opt/homebrew/bin/bash --login -i
 # font
 font_family JetBrainsMono Nerd Font Medium
 bold_font JetBrainsMono Nerd Font Bold
-italic_font JetBrainsMono Nerd Font SemiLight Italic
+italic_font CaskaydiaCove Nerd Font SemiLight
 bold_italic_font CaskaydiaCove Nerd Font Bold Italic
-font_size 17
+font_size 16
 adjust_line_height 8
 adjust_column_width -1
+symbol_map U+00B7 CaskaydiaCove Nerd Font ExtraLight Italic
 
 
 # theme
@@ -19,7 +20,7 @@ cursor_blink_interval 0
 cursor_text_color #ffffff
 selection_background #8d9091
 selection_foreground #ffffff
-#black
+# black
 color0 #000000
 color8 #545753
 # red
@@ -68,14 +69,14 @@ inactive_border_color #000000
 
 
 # tab bar
-tab_bar_edge top
+# tab_bar_edge top
 tab_bar_style separator
 tab_separator ""
 tab_title_template "{fmt.fg.grey}{fmt.bg.white}  {index}"
 active_tab_title_template "{fmt.fg.orange}{fmt.bg.white}  {index}"
 active_tab_font_style bold
 inactive_tab_font_style bold
-tab_bar_min_tabs 1
+tab_bar_min_tabs 100
 
 
 # advanced
