--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,7 +6,7 @@ bold_font JetBrainsMono Nerd Font Bold
 italic_font CaskaydiaCove Nerd Font SemiLight
 bold_italic_font CaskaydiaCove Nerd Font Bold Italic
 font_size 16
-adjust_line_height 10
+adjust_line_height 8
 adjust_column_width -1
 symbol_map U+00B7 CaskaydiaCove Nerd Font ExtraLight Italic
 
@@ -33,7 +33,7 @@ color10 #3dcc06
 color3 #e89f00
 color11 #d6d600
 # blue
-color4 #043ABD
+color4 #043abd
 color12 #157ae6
 # magenta
 color5 #8f008c
@@ -88,7 +88,6 @@ shell_integration no-cursor
 map ctrl+shift+equal no_op
 map ctrl+shift+minus no_op
 map cmd+q no_op
-map cmd+w no_op
 map ctrl+tab no_op
 # tab management
 map cmd+n new_tab
@@ -109,6 +108,7 @@ map cmd+equal change_font_size all +0.5
 map cmd+minus change_font_size all -0.5
 map cmd+0 change_font_size all 0
 # window
+map cmd+w  close_window
 map cmd+s launch --location=split
 map cmd+shift+s launch --location=hsplit
 map cmd+h neighboring_window left
@@ -116,15 +116,21 @@ map cmd+l neighboring_window right
 map cmd+k neighboring_window up
 map cmd+j neighboring_window down
 map cmd+r layout_action rotate
-map cmd+shift+= resize_window wider 0.5
-map cmd+shift+- resize_window taller 0.5
+map cmd+shift+= resize_window wider 5
+map cmd+shift+- resize_window taller 5
+map cmd+ctrl+shift+= resize_window wider 0.5
+map cmd+ctrl+shift+- resize_window taller 0.5
 map cmd+m toggle_layout stack
 # scrolling
 map cmd+y show_scrollback
 map cmd+d remote_control scroll-window 0.5p
 map cmd+u remote_control scroll-window 0.5p-
+map cmd+shift+d remote_control scroll-window 0.5p
+map cmd+shift+u remote_control scroll-window 0.5p-
 map cmd+shift+k scroll_line_up
 map cmd+shift+j scroll_line_down
 # search
 map cmd+shift+f launch --type=overlay --stdin-source=@screen_scrollback /opt/homebrew/bin/fzf --no-sort --no-mouse --exact -i
 map cmd+f combine : show_scrollback : send_key ?
+# clear
+# map ctrl+l send_text normal printf \'\\033[2J\\033[3J\\033[1;1H\'\x0d
