--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,11 +1,12 @@
 shell /opt/homebrew/bin/bash --login -i
+clone-in-kitty
 
 # font
 font_family JetBrainsMono Nerd Font Medium
 bold_font JetBrainsMono Nerd Font Bold
-italic_font CaskaydiaCove Nerd Font SemiLight
-bold_italic_font CaskaydiaCove Nerd Font Bold Italic
-font_size 15.5
+italic_font JetBrainsMono Nerd Font Light Italic
+bold_italic_font JetBrainsMono Nerd Font Bold Italic
+font_size 16
 adjust_line_height 8
 adjust_column_width -1
 symbol_map U+00B7 CaskaydiaCove Nerd Font ExtraLight Italic
@@ -53,8 +54,8 @@ paste_actions quote-urls-at-prompt
 
 
 # performance tuning
-repaint_delay 2
-input_delay 1
+repaint_delay 6
+input_delay 0
 sync_to_monitor no
 
 
@@ -109,8 +110,8 @@ map cmd+minus change_font_size all -0.5
 map cmd+0 change_font_size all 0
 # window
 map cmd+w  close_window
-map cmd+s launch --location=split
-map cmd+shift+s launch --location=hsplit
+map cmd+s launch --location=split --cwd=current
+map cmd+shift+s launch --location=hsplit --cwd=current
 map cmd+h neighboring_window left
 map cmd+l neighboring_window right
 map cmd+k neighboring_window up
