change to dark theme

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -9,42 +9,7 @@ bold_italic_font JetBrainsMono Nerd Font Bold Italic
 font_size 16
 adjust_line_height 8
 adjust_column_width -1
-symbol_map U+00B7 CaskaydiaCove Nerd Font ExtraLight Italic
-
-
-# theme
-background #ffffff
-foreground #000000
-cursor #666666
-cursor_shape block
-cursor_blink_interval 0
-cursor_text_color #ffffff
-selection_background #8d9091
-selection_foreground #ffffff
-# black
-color0 #000000
-color8 #545753
-# red
-color1 #cc0000
-color9 #ef2828
-# green
-color2 #227a00
-color10 #3dcc06
-# yellow
-color3 #e89f00
-color11 #d6d600
-# blue
-color4 #043abd
-color12 #157ae6
-# magenta
-color5 #8f008c
-color13 #5a32a3
-# cyan
-color6 #05989a
-color14 #34e2e2
-# white
-color7 #d3d7cf
-color15 #ededec
+symbol_map U+00B7 CaskaydiaCove Nerd Font Italic
 
 
 # mouse
@@ -65,8 +30,6 @@ window_padding_width 0
 confirm_os_window_close 0
 enabled_layouts splits,stack
 window_border_width 0.5pt
-active_border_color #000000
-inactive_border_color #000000
 
 
 # tab bar
@@ -133,5 +96,56 @@ map cmd+shift+j scroll_line_down
 # search
 map cmd+shift+f launch --type=overlay --stdin-source=@screen_scrollback /opt/homebrew/bin/fzf --no-sort --no-mouse --exact -i
 map cmd+f combine : show_scrollback : send_key ?
-# clear
-# map ctrl+l send_text normal printf \'\\033[2J\\033[3J\\033[1;1H\'\x0d
+
+
+# vim:ft=kitty
+
+## name: Tokyo Night
+## license: MIT
+## author: Folke Lemaitre
+## upstream: https://github.com/folke/tokyonight.nvim/raw/main/extras/kitty/tokyonight_night.conf
+background #1a1b26
+foreground #c0caf5
+selection_background #283457
+selection_foreground #c0caf5
+url_color #73daca
+cursor #c0caf5
+cursor_text_color #1a1b26
+
+# Tabs
+active_tab_background #7aa2f7
+active_tab_foreground #16161e
+inactive_tab_background #292e42
+inactive_tab_foreground #545c7e
+#tab_bar_background #15161e
+
+# Windows
+active_border_color #7aa2f7
+inactive_border_color #292e42
+
+# normal
+color0 #15161e
+color1 #f7768e
+color2 #9ece6a
+color3 #e0af68
+color4 #7aa2f7
+color5 #bb9af7
+color6 #7dcfff
+color7 #a9b1d6
+
+# bright
+color8 #414868
+color9 #f7768e
+color10 #9ece6a
+color11 #e0af68
+color12 #7aa2f7
+color13 #bb9af7
+color14 #7dcfff
+color15 #c0caf5
+
+# extended colors
+color16 #ff9e64
+color17 #db4b4b
+
+cursor_shape block
+cursor_blink_interval 0
