--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,12 +1,9 @@
 shell /opt/homebrew/bin/bash --login -i
 clone-in-kitty
-notify_on_cmd_finish invisible 1.0 command kitten notify "job finished with status: %s" %c
 
 # font
-font_family      family='JetBrainsMonoNL Nerd Font Mono' style=SemiBold
-bold_font        family='JetBrainsMonoNL Nerd Font Mono' style=ExtraBold
-italic_font      family='JetBrainsMonoNL Nerd Font Mono' style='SemiBold Italic'
-bold_italic_font family='JetBrainsMonoNL Nerd Font Mono' style='Bold Italic'
+font_family      family='JetBrains Mono' style=Medium
+bold_font        family='JetBrains Mono' style=Bold
 font_size 16
 adjust_line_height 4
 adjust_column_width -2
@@ -48,11 +45,6 @@ tab_bar_min_tabs 100
 shell_integration no-cursor
 
 
-# cursor trail
-cursor_trail 1
-cursor_trail_decay 0 0.2
-cursor_trail_start_threshold 1
-
 # keybinding
 # unmap
 map ctrl+shift+equal no_op
@@ -60,7 +52,6 @@ map ctrl+shift+minus no_op
 map cmd+q no_op
 map ctrl+tab no_op
 # tab management
-map cmd+n new_tab
 map cmd+i previous_tab
 map cmd+o next_tab
 map cmd+1 goto_tab 1
@@ -72,7 +63,7 @@ map cmd+6 goto_tab 6
 map cmd+7 goto_tab 7
 map cmd+8 goto_tab 8
 map cmd+9 goto_tab 9
-map cmd+; select_tab
+# map cmd+; select_tab
 # font size
 map cmd+equal change_font_size all +0.5
 map cmd+minus change_font_size all -0.5
@@ -99,7 +90,7 @@ map cmd+shift+d remote_control scroll-window 0.5p
 map cmd+shift+u remote_control scroll-window 0.5p-
 # search
 map cmd+shift+f launch --type=overlay --stdin-source=@screen_scrollback /opt/homebrew/bin/fzf --no-sort --no-mouse --exact -i
-map cmd+f combine : show_scrollback : send_key ?
+map cmd+f show_scrollback
 
 
 # theme
